--- a/Biodata-Affifah Aulia Zahra.html
+++ b/Biodata-Affifah Aulia Zahra.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
