--- a/index.html
+++ b/index.html
@@ -19,9 +19,69 @@
 		<button class="btnLogin-popup">Login</button>
 	</header>
 
-	<div class="wrapper">
+	<div class="wrapper body-1">
+		<span class="icon-close"><ion-icon name="close"></ion-icon></span>
+
 		<div class="form-box login">
 			<h2>Login</h2>
+			<form action="#">
+				<div class="input-box">
+					<span class="icon">
+						<ion-icon name="mail"></ion-icon>
+					</span>
+					<input type="email" required>
+					<label>Email</label>
+				</div>
+				<div class="input-box">
+					<span class="icon">
+						<ion-icon name="lock-closed"></ion-icon>
+					</span>
+					<input type="password" required>
+					<label>Password</label>
+				</div>
+				<div class="remember-forgot">
+					<label><input type="checkbox"> Remember me</label>
+					<a href="#">Forgot Password?</a>
+				</div>
+				<button type="submit" class="btn-1">Login</button>
+				<div class="login-register">
+					<p>Don't have an account? <a href="#" class="register-link">Register</a></p>
+				</div>
+			</form>
+		</div>
+
+		<div class="form-box register">
+			<h2>Registration</h2>
+			<form action="#">
+				<div class="input-box">
+					<span class="icon">
+						<ion-icon name="person"></ion-icon>
+					</span>
+					<input type="text" required>
+					<label>Username</label>
+				</div>
+				<div class="input-box">
+					<span class="icon">
+						<ion-icon name="mail"></ion-icon>
+					</span>
+					<input type="email" required>
+					<label>Email</label>
+				</div>
+				<div class="input-box">
+					<span class="icon">
+						<ion-icon name="lock-closed"></ion-icon>
+					</span>
+					<input type="password" required>
+					<label>Password</label>
+				</div>
+				<div class="remember-forgot">
+					<label><input type="checkbox"> I agree to the terms & conditions</label>
+				</div>
+				<button type="submit" class="btn-1">Register</button>
+				<div class="login-register">
+					<p>Already have an account? <a href="#" class="login-link">Login</a></p>
+				</div>
+			</form>
 		</div>
 	</div>
 	
@@ -155,13 +215,13 @@
 						</div>
 					</section>
 					<section id="section-04" class="section animation">
-						<div class="section-body">
+						<div class="section-body-1">
 							<h2 class="section-title-1 animation-translate-overline animation-item-1">Hobby</h2>
 							<h2 class="section-subtitle animation-translate-overline animation-item-1">3D Art</h2>
 							<div class="row animation-translate animation-item-2">
 								<div class="col- col-md-4">
 									<a class="card">
-										<img class="card-img-top rounded-corners" src="assets/img/project_1.jpg" alt="The Lantern">
+										<img class="card-img-top" src="assets/img/project_1.jpg" alt="The Lantern">
 										<div class="card-body">
 											<h3 class="card-title">The Lantern</h3>
 											<p class="card-tags">2022 | Blender</p>
@@ -170,7 +230,7 @@
 								</div>
 								<div class="col-12 col-md-4">
 									<a class="card">
-										<video class="card-img-top rounded-corners" autoplay loop muted>
+										<video class="card-img-top-2" autoplay loop muted>
                                             <source src="assets/img/project_2.mp4" type="video/mp4" />
                                         </video>
 										<div class="card-body">
@@ -181,7 +241,7 @@
 								</div>
 								<div class="col-12 col-md-4">
 									<a class="card">
-										<video class="card-img-top rounded-corners" autoplay loop muted>
+										<video class="card-img-top" autoplay loop muted>
                                             <source src="assets/img/project_3.mp4" type="video/mp4" />
                                         </video>
 										<div class="card-body">
@@ -192,7 +252,7 @@
 								</div>
 								<div class="col-12 col-md-4">
 									<a class="card">
-										<video class="card-img-top rounded-corners" autoplay loop muted>
+										<video class="card-img-top" autoplay loop muted>
                                             <source src="assets/img/project_4.mp4" type="video/mp4" />
                                         </video>
 										<div class="card-body">
@@ -203,7 +263,7 @@
 								</div>
 								<div class="col-12 col-md-4">
 									<a class="card">
-										<video class="card-img-top rounded-corners" autoplay loop muted>
+										<video class="card-img-top" autoplay loop muted>
                                             <source src="assets/img/project_5.mp4" type="video/mp4" />
                                         </video>
 										<div class="card-body">
@@ -242,4 +302,6 @@
 	
 </body>
 <script src="dist/js/all.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </html>
