--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
 <!--Side Menu-->
 <body class="with-header position-relative" data-spy="scroll" data-target="#sections-nav" data-offset="80">
 	<header>
-		<img class="header-brand" src="assets/img/logo.png">
+		<img class="header-brand" src="assets/img/logo.png" alt="">
 		<button class="btnLogin-popup">Login</button>
 	</header>
 
@@ -128,20 +128,20 @@
 								<h1 class="display-1 display-animated display-animated-in animation-translate animation-item-2">Affifah Aulia<br>Zahra</h1>
 								<p class="lead animation-translate animation-item-3">Student | 222406005</p>
 								<p class="animation-translate timeline-text">
-									<img class="envelope-at" src="assets/img/instagram.svg" >
+									<img class="envelope-at" src="assets/img/instagram.svg" alt="">
 									<a href="https://www.instagram.com/id_whxx.15/" target="_blank">id_whxx.15</a>
 								</p>
 								<p class="animation-translate timeline-text">
-									<img class="envelope-at" src="assets/img/email.svg"> affifahaulia.zahra@gmail.com</i>
+									<img class="envelope-at" src="assets/img/email.svg" alt=""> affifahaulia.zahra@gmail.com</i>
 								</p>
 								<p class="animation-translate timeline-text">
-									<img class="envelope-at" src="assets/img/telephone.svg"> +6282167135757</i>
+									<img class="envelope-at" src="assets/img/telephone.svg" alt=""> +6282167135757</i>
 								</p>
 								<p class="animation-translate timeline-text">
-									<img class="envelope-at" src="assets/img/address.svg"> Jl. T. Amir Hamzah No. 371 A, Binjai, Sumatera Utara, Indonesia</i>
+									<img class="envelope-at" src="assets/img/address.svg" alt=""> Jl. T. Amir Hamzah No. 371 A, Binjai, Sumatera Utara, Indonesia</i>
 								</p>
 								<p class="animation-translate timeline-text">
-									<img class="envelope-at" src="assets/img/date.svg"> Medan, 15 September 2004</i>
+									<img class="envelope-at" src="assets/img/date.svg" alt=""> Medan, 15 September 2004</i>
 								</p>
 							</div>
 						</div>
@@ -219,7 +219,7 @@
 							<div class="row animation-translate animation-item-2">
 								<div class="col- col-md-4">
 									<a class="card">
-										<img class="card-img-top" src="assets/img/project_1.jpg" alt="The Lantern">
+										<img class="card-img-top" src="assets/img/project_1.jpg" alt="">
 										<div class="card-body">
 											<h3 class="card-title">The Lantern</h3>
 											<p class="card-tags">2022 | Blender</p>
