--- a/index.html
+++ b/index.html
@@ -261,9 +261,7 @@
 								</div>
 								<div class="col-12 col-md-4">
 									<a class="card">
-										<video class="card-img-top" autoplay loop muted>
-                                            <source src="assets/img/project_5.mp4" type="video/mp4" />
-                                        </video>
+										<iframe src="https://drive.google.com/file/d/1rkidk3nViXLellPzB-AocB6Ruf_N923F/preview" autoplay loop muted></iframe>
 										<div class="card-body">
 											<h3 class="card-title">Default Cube Loop</h3>
 											<p class="card-tags">2023 | Blender</p>
