--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
 								<div class="col-12 col-md-4">
 									<a class="card">
 										<video class="card-img-top" autoplay loop muted>
-                                            <source src="assets/img/project_4.mp4" type="video/mp4" />
-                                        </video>
+                                            						<source src="assets/img/project_4.mp4" type="video/mp4" />
+                                        					</video>
 										<div class="card-body">
 											<h3 class="card-title">Gears Loop</h3>
 											<p class="card-tags">2023 | Blender</p>
@@ -261,7 +261,9 @@
 								</div>
 								<div class="col-12 col-md-4">
 									<a class="card">
-										<iframe src="https://drive.google.com/file/d/1rkidk3nViXLellPzB-AocB6Ruf_N923F/preview" autoplay loop muted></iframe>
+										<video class="card-img-top" autoplay loop muted>
+                                            						<source src="assets/img/project_5.mp4" type="video/mp4" />
+                                        					</video>
 										<div class="card-body">
 											<h3 class="card-title">Default Cube Loop</h3>
 											<p class="card-tags">2023 | Blender</p>
