--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="dist/css/yellow-black.css" rel="stylesheet">
 	<link href="dist/css/preview.css" rel="stylesheet">
 	<link rel="icon" type="image/png" href="assets/img/logo.png">
-	<title>Biodata - Affifah Aulia Zahra</title>
+	<title>now you know.</title>
 </head>
 
 <!--Side Menu-->
