--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 									<img class="envelope-at" src="assets/img/telephone.svg" alt=""> +6282167135757</i>
 								</p>
 								<p class="animation-translate timeline-text">
-									<img class="envelope-at" src="assets/img/address.svg" alt=""> Jl. T. Amir Hamzah No. 371 A, Binjai, Sumatera Utara, Indonesia</i>
+									<img class="envelope-at" src="assets/img/address.svg" alt=""> Binjai, Sumatera Utara, Indonesia</i>
 								</p>
 								<p class="animation-translate timeline-text">
 									<img class="envelope-at" src="assets/img/date.svg" alt=""> Medan, 15 September 2004</i>
